# Project_Airflow

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
dags/: get_api.py
include/: class_.py  main.py
